# assembly-calculator

./: main  main.asm
calculator-gui/: CMakeLists.txt  main.asm  main.cpp
calculator-tui/: main.asm
